# bias-ext-search

./: extension.json  pyproject.toml
bias_ext_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bias_ext_search/backend/: admin_api.py  api.py  apps.py  constants.py  ext.py  extenders.py  filters.py  frontend.py  runtime.py  schemas.py  search_contracts.py  services.py  tests.py
frontend/admin/: SearchSettingsPage.vue  index.js
frontend/forum/: GlobalSearchModal.vue  HeaderSearchBox.vue  SearchResultCard.vue  SearchResultSection.vue  SearchResultsView.vue  SearchStats.vue  index.js  sdk.d.ts  sdk.js  search.js  searchFilterCatalog.js  searchFilterCatalog.test.js  searchFrontendRegistry.js  useSearchResultsLoadState.js  useSearchResultsPage.js  useSearchResultsPageLifecycle.js  useSearchResultsRealtimeState.js  useSearchResultsResourceState.js  useSearchResultsResourceState.test.js  useSearchResultsViewBindings.js  useSearchResultsViewBindings.test.js  useSearchResultsViewModel.js  useSearchRouteState.js
tests/: test_runtime_facade_imports.py
