[project]
name = "bias-ext-search"
version = "0.1.0"
description = "Bias search Extension"
requires-python = ">=3.11"
dependencies = ["bias-core>=0.1,<0.2"]
[project.entry-points."bias.extensions"]
search = "bias_ext_search.backend.ext:extend"
[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_search*"]
